Added test for jboss serialization